[FIX] split js files

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #343438;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 18%;
+    margin-right: 18%;
     margin-top: 1%;
     margin-bottom: 1%;
     color: white;
@@ -29,25 +29,37 @@ body {
 .search {
     width: 30%;
 }
+
 .anchor:hover {
     text-decoration: underline;
 }
+
 .form-control {}
 
 #default-contact {
     width: 10%;
 }
+
 h3 {
     margin-left: 1%;
 }
+
+h3:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    cursor: hand;
+}
+
 big {
     text-decoration: underline;
     font-weight: bold;
 }
+
 .input-group {
     margin: 1%;
     width: 300px;
 }
+
 .contact-card {
     border-style: solid;
     border-color: black;
@@ -68,13 +80,15 @@ big {
     cursor: hand;
 }
 
-.ceo-contact-img {
+.contact-img {
     float: right;
-    width: 20%;
+    width: 65px;
+    height: 65px
 }
 
 .manager-contact-img {
+    display: block;
     float: right;
-    width: 20%;
-    padding-top: 12px;
+    width: 65px;
+    height: 65px;
 }
