--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #343438;
-    margin-left: 18%;
-    margin-right: 18%;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 1%;
     margin-bottom: 1%;
     color: white;
@@ -66,7 +66,7 @@ big {
     border-width: 1px;
     border-radius: 20px;
     color: black;
-    width: 380px;
+    width: 300px;
     padding: 1%;
     margin: 1%;
     text-align: left;
@@ -82,8 +82,8 @@ big {
 
 .contact-img {
     float: right;
-    width: 65px;
-    height: 65px
+    width: 70px;
+    margin-top: 5px;
 }
 
 .manager-contact-img {
